# airflow-dbt-databricks-project

./: .gitignore  README.md  main.py  pyproject.toml
airflow-dbt-databricks-portfolio-project/: Dockerfile  requirements.txt
airflow-dbt-databricks-portfolio-project/config/: airflow.cfg
airflow-dbt-databricks-portfolio-project/walmart_project/walmart_project/: .user.yml  dbt_project.yml
airflow-dbt-databricks-portfolio-project/walmart_project/walmart_project/models/gold/ephemeral/: eph_customers.sql
airflow-dbt-databricks-portfolio-project/walmart_project/walmart_project/models/silver_b/: obt_b.sql
airflow-dbt-databricks-portfolio-project/walmart_project/walmart_project/models/silver_t/: orders_t.sql  products_t.sql  properties.yml
airflow-dbt-databricks-portfolio-project/walmart_project/walmart_project/models/source/: sources.yml
airflow-dbt-databricks-project/: docker-compose.yaml
airflow-dbt-databricks-project/dags/: orchestrate.py
airflow-dbt-databricks-project/walmart_project/: main.py  pyproject.toml
airflow-dbt-databricks-project/walmart_project/walmart_project/: profiles.yml
airflow-dbt-databricks-project/walmart_project/walmart_project/models/silver_t/: customers_t.sql  employees_t.sql  order_items_t.sql  stores_t.sql
airflow-dbt-databricks-project/walmart_project/walmart_project/tests/: test_obt.sql
